--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,7 +3,9 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/exerciser/registerForm.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/frameFooter.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/frameHeader.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/matching/startMatching.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/matching/wantRecommend.jsp=UTF-8
 encoding//src/main/webapp/index.jsp=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
