--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-     <commons-dbcp2.version>2.2.0</commons-dbcp2.version>      
+     <commons-dbcp2.version>2.2.0</commons-dbcp2.version>   
+     <commons-fileupload.version>1.4</commons-fileupload.version>   
      <oracle-jdbc-driver.version>21.1.0.0</oracle-jdbc-driver.version>
   </properties>
 
@@ -51,6 +52,13 @@
          <scope>provided</scope>
       </dependency>
       
+      <!-- file upload API -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
+		</dependency>
+		
       <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
