--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <servlet-api.version>4.0.1</servlet-api.version>
+	<jsp.version>2.3.3</jsp.version>
+	<jstl.version>1.2</jstl.version>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
      <commons-dbcp2.version>2.2.0</commons-dbcp2.version>   
@@ -29,6 +32,24 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- Servlet & JSP API -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet-api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>${jsp.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+		
     <!-- DBCP2 -->
       <dependency>
          <groupId>org.apache.commons</groupId>
